security/service-mesh/istio/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: default
spec:
  outboundTrafficPolicy:
    mode: ALLOW_ANY
  egress:
    - hosts:
        - "istio-system/*"
